# The-Pitch-Visualizer

./: .env.example  README.md  pyproject.toml  test_api.py
app/: main.py
app/models/: schemas.py
app/routes/: export.py  storyboard.py
app/services/: ai_provider.py  image_service.py  prompt_factory.py
frontend/: app.js  index.html  style.css
