[project]
name = "darwix-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "huggingface-hub>=1.10.2",
    "pillow>=12.2.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.29.0",
]
